# metaxu

./: .gitattributes  .gitignore  README.md  dodo.py  llm-ctx.txt  pyproject.toml  run_interp.py  test_borrow_check.mx  test_locality_local.mx  test_locality_ref.mx  test_operations.mx  test_type_error.mx
.github/: linguist-languages.yml
archive/old_tests/: test_atomic_effects.c  (+8 more)
docs/: compiler_roadmap.md  contributing.md  future_considerations.md  index.md  ownership_and_borrowing.md  type_system.md
examples/: 01_modes_and_references.mx  02_effects_and_handlers.mx  03_modules_and_imports.mx  04_advanced_types.mx  05_unsafe_and_ffi.mx  06_vector_operations.mx  10_traits_and_structs.mx  collections.mx  effect_mapping.mx  effects.mx  hello.mx  linked_list.mx  ownership.mx
notebooks/: metaxu_dev.ipynb
src/: ast.py  c_interop.py  c_linker.py  codegen.py  continuation_safety.py  extern_ast.py  hello.py  lexer.py  linker.py  metaxu.py  metaxu_ast.py  parser.py  symbol_table.py  tape_vm.py  type_checker.py  type_defs.py  vm_to_c.py
tests/: test_atomic_effects.c  test_atomic_state.mx  test_borrow_check.mx  test_continuation_safety.py  test_effect_runtime.c  test_effect_safety.py  test_effectful_code.py  test_extern_parsing.py  test_linearity.py  test_linked_list.py  test_locality_local.mx  test_module_system.py  test_module_system_parsing.py  test_modules.mx  test_operations.mx  test_references_and_functions_parsing.py  test_type_inference.mx  test_type_inference.py  test_unsafe_parsing.py
vscode-metaxu/: README.md  language-configuration.json  package.json
(+99 files in other folders)
